@@ -19,22 +19,60 @@
 #
 
 # Options:
-# $1 name of the case test must be run
-# $2 [reset|noreset] to reset the LIXA server status
+# $1 [reset|noreset] to reset the LIXA server status
+# $2 [start|stop|recycle|none] to start, stop, recycle or keep running the 
+#    server
+# $3 name of the case test must be run
 
 . lixa_test_functions.sh
+
+if test $# -lt 3
+then
+	echo "At least three parameters must be specified"
+	exit 1
+fi	
 
 if test x"$1" = xreset
 then
 	reset_server
 fi	
 
-if test -z "$2"
+START_SERVER="NO"
+STOP_SERVER="NO"
+case "$2" in
+	start) START_SERVER="YES" 
+	;;
+	stop) STOP_SERVER="YES"
+	;;
+	recycle) START_SERVER="YES" ; STOP_SERVER="YES"
+	;;
+	none)
+	;;
+	*)
+	echo "Second argument must be [start|stop|recycle|none]"
+	exit 1
+	;;
+esac
+
+if test -x "$3"
 then
 	echo "No program to test, exiting with error"
 	exit 1
 fi
 
-shift 
+shift 2
+
+if test "$START_SERVER" = "YES"
+then
+	start_server
+fi
 
 exec_test $*
+rc=$?
+
+if test "$STOP_SERVER" = "YES"
+then
+	stop_server
+fi
+
+exit $rc
